# Song-Discovery

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
artists/: models.py  schema.py
artists/migrations/: 0001_initial.py  0002_albumartist.py  0003_delete_albumartist.py
django_song_search/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
