[tool.poetry]
name = "django_song_search"
version = "0.1.0"
description = ""
authors = ["Kris Litman <kris.d.litman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
graphene-django = "^2.15.0"
python-dotenv = "^0.17.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.8.6"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
